# svg-generator-mcp

./: .dockerignore  .eslintrc.cjs  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROJECT_STATUS.md  README.md  package-lock.json  package.json  pyproject.toml  smithery.yaml  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
src/: index.ts  smoke.test.ts
src/server/: svg-generator-server.test.ts  svg-generator-server.ts
src/services/: mflux-service.ts  model-service.ts  svg-processor.test.ts  svg-processor.ts
src/types/: index.ts
src/utils/: logger.test.ts  logger.ts
svg_generator_mcp/: __init__.py  main.py  package-lock.json
tests/: README.md  __init__.py
tests/integration/: __init__.py  test_debug_paths.py  test_mcp_protocol.py  test_server_startup.py  test_uvx_final.py  test_uvx_startup.py
